fix toolbar title alignment

--- a/src/header/toolbar/toolbar.component.scss
+++ b/src/header/toolbar/toolbar.component.scss
@@ -14,7 +14,6 @@
             h1 {
                 font-size: 20px;
                 font-weight: 700;
-                margin-top: 0.67em;
             }
 
             > .toolbar-spacer {
